# _MAGUS_RPG

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Project_Roadmap.md  README.md  conftest.py  magus_rpg.db  main.py  mkdocs.yml  pyproject.toml  pytest.ini  setup_env.bat  setup_env.ps1  setup_env.sh  test_output.txt  test_unit_popup_debug.py
Gamemaster_tools/: main.py  test_refactoring.py
Gamemaster_tools/config/: __init__.py  paths.py
Gamemaster_tools/engine/: race.py  (+9 more)
MAGUS_pygame/: MIGRATION.md  __init__.py  action_attack.py  action_handling.py  action_movement.py  character_loader.py  config.py  game_state.py  hex_grid.py  main.py  movement_handling.py  sprite_manager.py  unit_manager.py
characters/: Fejvadász.json  Goblin_warrior.json  Harcos.json  Teszt.json  Varázsló.json  Warri.json  Warrior_heavy_armor.json  asd.json
data/: __init__.py  class_additional_stats.py  class_stat_weights.py  race_age_stat_modifiers.py  skills_editor.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPER_GUIDE.md  FONT_MANAGEMENT.md  PROJECT_ROADMAP.md  PROJECT_STATUS.md  README.md  SCENARIO_EDITOR.md
engine/: __init__.py  armor_manager.py  character.py  currency_manager.py  weapon_material_quality_manager.py
site/: 404.html  index.html
skills/: skill_manager.py  skills.json  skills.py  skills_editor.py
tests/: test_battle_special_attack_config.py  test_battle_special_attack_eligibility.py  weapon_naming_stat_test.py
ui/: __init__.py  character_creator.py  character_creator_qt.py  character_page.py  class_editor.py  class_skill_editor.py  description_editor.py  equipment_editor.py  prerequisite_editor.py  skill_editor.py  skill_prerequisite_editor.py  skills_editor.py
utils/: __init__.py  character_storage.py  class_db_manager.py  json_manager.py  reopen_prevention.py  skill_manager.py  skill_prerequisite_manager.py  skilldata_manager.py  weapondata_manager.py
(+569 files in other folders)
